2005-02-21  JP Rosevear  <jpr@novell.com>

	* startup-wizard.c: A plugin the does the startup wizard
