@@ -1,3 +1,9 @@
+2005-07-06  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* startup-wizard.c: (startup_wizard_delete), (startup_wizard):
+	Exit evolution when closing wizard using window manager control ; 
+	don't set hint or wmclass, it is too late, window is already realized.
+
 2005-02-21  JP Rosevear  <jpr@novell.com>
 
 	* startup-wizard.c: A plugin the does the startup wizard
